--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-gauge-component": "^1.2.21",
+    "react-google-charts": "^4.0.1",
     "react-liquid-gauge": "^1.2.4",
     "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
